# md-preflight

./: .env.example  .gitignore  .vercelignore  2026-07-14-New-Service-Flow.md  2026-07-14-Project-Redesign.md  AGENTS.md  ARCHIVE.md  BACKEND_ARCHITECTURE.md  DESIGN.md  PROJECT_BRIEF.md  README.md  demo.sh  pyproject.toml  requirements.txt  slide-outline.md  vercel.json
app/: main.py
app/api/: deps.py  routes.py
app/core/: __init__.py  config.py  errors.py  rule_config.py
app/data/: __init__.py  demo_anchor_survey.json
app/domain/: column_aliases.py  columns.py  context.py  role_detect.py
app/ingest/: loader.py  normalize.py
app/pipeline/: __init__.py  demo_anchor_survey.py  demo_anchor_survey_blob.py  domain_catalog.py  region_catalog.py  runner.py  types.py  (+1 more)
docs/: architecture-easy.md  architecture-input-flexibility-decision.md  architecture-report-2026-07-16.md  architecture.md  dev-journal-2026-07-14-to-0723.md  dev-journal-2026-07.md  rule-matrix.md  setup-kakao-local.md
handoff/: 2026-07-02-mvp-rule-expansion.md  2026-07-02-workspace-smoke-test.md  2026-07-04-t1-commit-preservation.md  2026-07-04-tech-lead-diagnosis-and-tickets.md
outputs/: 발주맞춤-OrderFit-A3-포스터-시안.pptx
scripts/: README.md  seed_db.py  verify_auth_helpers.mjs  verify_checklist_editor.mjs  verify_competition_sim.mjs  verify_csv_tools.mjs  verify_demo_scenarios.mjs  verify_dom_util.mjs  verify_editor_focus.mjs  verify_editor_structure.mjs  verify_error_format.mjs  verify_history_dashboard.mjs  verify_issue_view.mjs  verify_report_export.mjs  verify_review_status.mjs  verify_router.mjs  verify_source_request.mjs  verify_wizard_logic.mjs
slides/: design-debt.md  pass-a-report.md  pass-b-report.md  slide-01.html  slide-02.html  slide-03.html  slide-04.html  slide-05.html  slide-06.html  slide-07.html  slide-08.html  slide-09.html  slide-10.html  slide-11.html  slide-12.html  slide-13.html  slide-14.html  viewer.html
tests/: conftest.py  test_api.py  test_auth_mode.py  test_catalog_api.py  test_clerk_auth.py  test_column_aliases.py  test_competition_saturation.py  test_demo_anchor_survey.py  test_duplicate_master_code_rule.py  test_event_foot_traffic.py  test_geo_enrichment.py  test_history_store.py  test_ingest_join_invariant.py  test_llm_service.py  test_loader.py  test_narrative_contract.py  test_pipeline.py  test_preflight_api_llm.py  test_role_detect.py  test_rule_versioning.py  test_rules.py  test_run_access_control.py  test_run_store.py  test_schemas.py  test_services.py  test_store_search.py  test_upload_validation_api.py  test_wizard_logic.py
(+140 files in other folders)
