[project]
name = "md-preflight-api"
version = "0.1.0"
description = "FastAPI backend MVP for deterministic promotion preflight checks"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.115.0",
  "fastapi>=0.116.0",
  "orjson>=3.10.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "python-dateutil>=2.9.0",
  "uvicorn>=0.35.0",
  "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.0",
  "httpx2>=0.0.7",
  "pandas-stubs>=3.0.3.260530",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "ARG"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.11"
include = ["app", "tests"]
extraPaths = ["."]
