[project]
name = "md-preflight-api"
version = "0.3.6"
description = "Store-specific Lead Time / ROP adjustment (input → analyze → output)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "orjson>=3.10.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.0",
  "httpx2>=0.0.7",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "ARG"]
# Generated one-line census JSON payload
"app/pipeline/demo_anchor_survey_blob.py" = ["E501"]
"app/data/demo_anchor_survey_blob.py" = ["E501"]
# Fixed long-form Korean AI prompt template (intentional line length)
"app/pipeline/analyze/decline_advice.py" = ["E501"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.11"
# App is fully typed; tests use FastAPI TestClient stubs that are incomplete under "all".
include = ["app"]
extraPaths = ["."]
